# BMR-ML-Pipeline_DBMS

./: .env.example  .gitignore  .pre-commit-config.yaml  BMR_EDA_and_ML_models.ipynb  Makefile  README.md  Telco-Customer-Churn.xlsm  docker-compose.yml  pyproject.toml  sys_queries.sql
.github/workflows/: cd-production.yml  ci.yml
data/local/: demo.duckdb
data/sample/: demo_reviews.json
data/segments/demo/: centroids.npy  clustering_summary.json  segment_labels.json
dbt/: dbt_project.yml  profiles.yml
embedding/: batch_embedder.py  config.py  preprocessor.py  vector_store.py
etl/extractors/: amazon_reviews_extractor.py  nyc_taxi_extractor.py
etl/loaders/: redshift_loader.py
etl/transformers/: feature_engineer.py
infra/docker/airflow/: Dockerfile
infra/docker/serving/: Dockerfile
infra/localstack/: init-aws.sh
infra/sql/: init_vectors.sql
infra/terraform/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/s3/: main.tf
mlops/: registry.py  train.py
monitoring/: grafana-datasources.yml  prometheus.yml
monitoring/alerts/: alert_rules.yaml
monitoring/drift/: evidently_report.py
pipelines/dags/: amazon_reviews_dag.py  model_retraining_dag.py  nyc_taxi_etl_dag.py
requirements/: base.txt  dev.txt  local-demo.txt  serving.txt
scripts/: download_samples.py  run_demo.py
segmentation/: clustering.py  drift_detector.py  segment_api.py
serving/: model_loader.py
serving/api/: main.py
tests/: conftest.py
tests/integration/: test_serving_api.py
tests/smoke/: test_api_smoke.py
tests/unit/: test_embedding.py  test_etl.py
