[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bmr-ml-pipeline"
version = "0.1.0"
description = "Industrial-grade ML & Data Engineering Platform: Customer Segmentation, Scalable ETL, and Model Versioning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aditya Mhaske" }]
keywords = [
    "machine-learning",
    "data-engineering",
    "nlp",
    "customer-segmentation",
    "apache-airflow",
    "mlops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["embedding*", "segmentation*", "etl*", "serving*", "mlops*", "pipelines*", "monitoring*"]

# ─── Ruff (Linter + Formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations (selective)
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # dynamically typed expressions (Any)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "notebooks/",
    "infra/terraform/",
    "dbt/",
]

[tool.ruff.isort]
known-first-party = ["embedding", "segmentation", "etl", "serving", "mlops", "pipelines", "monitoring"]

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN", "S101"]
"pipelines/dags/**" = ["ANN"]

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_imports = true
ignore_missing_imports = true
exclude = ["notebooks/", "infra/", "dbt/"]

[[tool.mypy.overrides]]
module = ["airflow.*", "sentence_transformers.*", "faiss.*", "hdbscan.*"]
ignore_missing_imports = true

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-exclude=tests/*",
]
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (require Airflow / Postgres)",
    "smoke: smoke tests (require running service)",
    "slow: tests that take >10 seconds",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["embedding", "segmentation", "etl", "serving", "mlops"]
omit = ["tests/*", "notebooks/*", "infra/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
